[package]
name = "passcli"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8.4"
anyhow = "1.0.87"
block-modes = "0.9.1"
clap = { version = "4.5.17", features = ["derive"] }
dirs = "5.0.1"
pbkdf2 = "0.12.2"
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
smart-default = "0.7.1"
toml = "0.8.19"
