[package]
name = "passcli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.87"
clap = { version = "4.5.17", features = ["derive"] }
colored = "2.2.0"
dialoguer = "0.11.0"
dirs = "5.0.1"
log = "0.4.22"
orion = { version = "0.17.7", features = ["serde"] }
rand = "0.8.5"
rpassword = "7.3.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
simplelog = "0.12.2"
smart-default = "0.7.1"
toml = "0.8.19"
